<resources>
    <string name="app_name">Resort Service</string>
    <string name="login_gretting">Welcome back</string>
    <string name="login_hint_username">Tên đăng nhập</string>
    <string name="login_hint_password">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="login_wrong_credential">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="connection_failed">Lỗi kết nối</string>
    <string name="api_url">http://192.168.56.1/resort/api/</string>
    <string name="booking">Đặt phòng</string>
    <string name="room_mgmt">Quản lý phòng</string>
    <string name="customer">Khách hàng</string>
    <string name="rating">Ý kiến đánh giá</string>
    <string name="statistics">Thống kê</string>
    <string name="logout">Đăng xuất</string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="room_infomation">Thông tin phòng</string>
    <string name="room_type">Loại phòng</string>
    <string name="room">Phòng</string>
    <string name="select_date">Chọn ngày</string>
    <string name="date_from">Từ ngày</string>
    <string name="date_to">Tới ngày</string>
    <string name="cofirm">Xác nhận</string>
    <string name="agree">Đồng ý</string>
    <string name="cancle">Hủy bỏ</string>
    <string name="booking_cofirm">Bạn có chắc chắn xác nhận đặt phòng</string>
    <string name="reservation_manage">QL đặt phòng</string>
    <string name="empty">Còn trống</string>
    <string name="booked">Đã được book</string>
    <string name="price">Giá</string>
    <string name="amount_room">Số lượng phòng</string>
    <string name="amount_customer">Số lượng khách hàng</string>
    <string name="amount_reservation">Số lượt đặt phòng</string>
</resources>
